@@ -38,7 +38,7 @@
 #endif
 
 #ifdef __GLIBC__
-// to get tm_zone defined
+// to get tm_zone, tm_gmtoff defined
 # define _BSD_SOURCE
 #endif
 #include <time.h>
@@ -418,6 +418,7 @@ static struct tm * localtime0(const double *tp, const int local)
     int left = (int) (d - day * 86400.0 + 1e-6); // allow for fractional secs
 
     struct tm ltm0, *res = &ltm0;
+    memset(res, 0, sizeof(struct tm));
     /* hour, min, and sec */
     res->tm_hour = left / 3600;
     left %= 3600;
@@ -580,7 +581,8 @@ static void glibc_fix(struct tm *tm, int *invalid)
 
 
 static const char ltnames [][6] =
-{ "sec", "min", "hour", "mday", "mon", "year", "wday", "yday", "isdst", "zone"};
+{ "sec", "min", "hour", "mday", "mon", "year", "wday", "yday", "isdst", 
+  "zone",  "gmtoff"};
 
 
 static void 
@@ -643,11 +645,14 @@ SEXP attribute_hidden do_asPOSIXlt(SEXP call, SEXP op, SEXP args, SEXP env)
     }
 
     R_xlen_t n = XLENGTH(x);
-    int nans = 10 - isgmt;
+    int nans = 11 - 2 * isgmt;
     PROTECT(ans = allocVector(VECSXP, nans));
     for(int i = 0; i < 9; i++)
 	SET_VECTOR_ELT(ans, i, allocVector(i > 0 ? INTSXP : REALSXP, n));
-    if(!isgmt) SET_VECTOR_ELT(ans, 9, allocVector(STRSXP, n));
+    if(!isgmt) {
+	SET_VECTOR_ELT(ans, 9, allocVector(STRSXP, n));
+	SET_VECTOR_ELT(ans, 10, allocVector(INTSXP, n));
+    }
 
     PROTECT(ansnames = allocVector(STRSXP, nans));
     for(int i = 0; i < nans; i++)
@@ -666,10 +671,13 @@ SEXP attribute_hidden do_asPOSIXlt(SEXP call, SEXP op, SEXP args, SEXP env)
 	makelt(ptm, ans, i, valid, d - floor(d));
 	if(!isgmt) {
 	    char *p = "";
-	    if(valid && ptm->tm_isdst >= 0) p = R_tzname[ptm->tm_isdst];
+	    // or ptm->tm_zone
+	    if(valid && ptm->tm_isdst >= 0) 
+		p = R_tzname[ptm->tm_isdst];
 	    SET_STRING_ELT(VECTOR_ELT(ans, 9), i, mkChar(p));
-#ifdef HAVE_TM_ZONE
-//	    if(valid) printf("tm_zone = %s\n", ptm->tm_zone);
+#ifdef HAVE_TM_GMTOFF
+	    if(valid)
+		INTEGER(VECTOR_ELT(ans, 10))[i] = (int)ptm->tm_gmtoff;
 #endif
 	}
     }
@@ -847,6 +855,9 @@ SEXP attribute_hidden do_formatPOSIXlt(SEXP call, SEXP op, SEXP args, SEXP env)
 	    // The system one, as we use system strftime here
 	    if(tm.tm_isdst >= 0) tzname[tm.tm_isdst] = tm_zone;
 #endif
+#ifdef HAVE_TM_GMTOFF
+	    tm.tm_gmtoff = INTEGER(VECTOR_ELT(x, 10))[i%n];
+#endif
 	}
 	if(!R_FINITE(secs) || tm.tm_min == NA_INTEGER ||
 	   tm.tm_hour == NA_INTEGER || tm.tm_mday == NA_INTEGER ||
@@ -935,7 +946,7 @@ SEXP attribute_hidden do_strptime(SEXP call, SEXP op, SEXP args, SEXP env)
     R_xlen_t n, m, N;
 
     checkArity(op, args);
-    if(!isString((x= CAR(args))))
+    if(!isString((x = CAR(args))))
 	error(_("invalid '%s' argument"), "x");
     if(!isString((sformat = CADR(args))) || XLENGTH(sformat) == 0)
 	error(_("invalid '%s' argument"), "x");
@@ -969,11 +980,14 @@ SEXP attribute_hidden do_strptime(SEXP call, SEXP op, SEXP args, SEXP env)
     n = XLENGTH(x); m = XLENGTH(sformat);
     if(n > 0) N = (m > n) ? m : n; else N = 0;
 
-    int nans = 10 - isgmt;
+    int nans = 11 - 2*isgmt;
     PROTECT(ans = allocVector(VECSXP, nans));
     for(int i = 0; i < 9; i++)
 	SET_VECTOR_ELT(ans, i, allocVector(i > 0 ? INTSXP : REALSXP, N));
-    if(!isgmt) SET_VECTOR_ELT(ans, 9, allocVector(STRSXP, n));
+    if(!isgmt) {
+	SET_VECTOR_ELT(ans, 9, allocVector(STRSXP, n));
+	SET_VECTOR_ELT(ans, 10, allocVector(INTSXP, n));
+    }
 
     PROTECT(ansnames = allocVector(STRSXP, nans));
     for(int i = 0; i < nans; i++)
@@ -983,6 +997,7 @@ SEXP attribute_hidden do_strptime(SEXP call, SEXP op, SEXP args, SEXP env)
     for(R_xlen_t i = 0; i < N; i++) {
 	/* for glibc's sake. That only sets some unspecified fields,
 	   sometimes. */
+	memset(&tm, 0, sizeof(struct tm));
 	tm.tm_sec = tm.tm_min = tm.tm_hour = 0;
 	tm.tm_year = tm.tm_mon = tm.tm_mday = tm.tm_yday =
 	    tm.tm_wday = NA_INTEGER;
@@ -1023,8 +1038,18 @@ SEXP attribute_hidden do_strptime(SEXP call, SEXP op, SEXP args, SEXP env)
 	makelt(ptm, ans, i, !invalid, psecs - floor(psecs));
 	if(!isgmt) {
 	    char *p = "";
-	    if(!invalid && tm.tm_isdst >= 0) p = R_tzname[tm.tm_isdst];
+	    if(!invalid && tm.tm_isdst >= 0) {
+#ifdef HAVE_TM_ZONE
+		p = tm.tm_zone;
+		if(!p)
+#endif
+		    p = R_tzname[tm.tm_isdst];
+	    }
 	    SET_STRING_ELT(VECTOR_ELT(ans, 9), i, mkChar(p));
+#ifdef HAVE_TM_GMTOFF
+	    if(!invalid)
+		INTEGER(VECTOR_ELT(ans, 10))[i] = (int)tm.tm_gmtoff;
+#endif
 	}
     }
 
